/*package main.java.org.example;
import java.util.ArrayList;

public class TextUI extends FileIO{

    public void displayMessage(String msg){
        System.out.println(msg);
    }


    public void displayMovies() {
        for (String[] s : movieList) {
            System.out.println(s);
        }
    }

    public void displaySeries() {
        for (String[] s : SeriesList) {
            System.out.println(s);
        }
    }

    public void displayWatchedMovie(User user){
        User name = new User("","");
        System.out.println(name.getUserName() + "," + " These are the movies that you have watched:");

        for(String s : user){
            System.out.println(s);
        }

        System.out.println("Would you like to watch a movie from the list? \n ** Y/N **");

    }

    public void displaySavedMovie(User user){
        User name = new User("","");
        System.out.println(name.getUserName()+ "," + " These are the movies you have saved for later viewing:");

        for(String s : user){
            System.out.println(s);
        }

        System.out.println("Would you like to watch a movie from the list? \n ** Y/N **");

    }

    public void displayWatchedSeries(User user){
        User name = new User("","");
        System.out.println(name.getUserName()+ "," + " This is a list of shows that you have watched:");

        for(String s : user){
            System.out.println(s);
        }

        System.out.println("Would you like to watch a show from the list? \n ** Y/N **");

    }

    public void displaySavedSeries(User user){
        User name = new User("","");
        System.out.println(name.getUserName()+ "," + " This is a list of shows you have saved for later viewing:");

        for(String s : user){
            System.out.println(s);
        }

        System.out.println("Would you like to watch a show from the list? \n ** Y/N **");

    }

}*/